	PR rtl-optimization/41064 	* reload1.c (reload_as_needed): Don't call extract_insn 	for known invalid replacements after calling 	validate_replace_rtx_group and verify_changes.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@150751 138bc75d-0d04-0410-961f-82ee72b054a4